helloworld/helloworld-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route2
spec:
  hosts:
  - helloworld
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld
        subset: v2
      weight: 25
    - destination:
        host: helloworld
        subset: v1
      weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination2
spec:
  host: helloworld
  subsets:
  - name: v3
    labels:
      version: v1
  - name: v4
    labels:
      version: v2
