helloworld/service1-gateway-sec.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service1-gateway-sec
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-sec
spec:
  hosts:
  - "*"
  gateways:
  - service1-gateway-sec
  http:
  - match:
    - uri:
        exact: /caller/ping
    route:
    - destination:
        host: service1
        port:
          number: 8090
