helloworld/service1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service1-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - "*"
  gateways:
  - service1-gateway
  http:
  - match:
    - uri:
        exact: /caller/ping
    route:
    - destination:
        host: service1
        port:
          number: 8090
